--- a/css/main.ie.css
+++ b/css/main.ie.css
@@ -9478,6 +9478,18 @@ tbody > tr:nth-child(2n+1) > td {
   text-transform: uppercase;
 }
 
+.wrapper,
+.content_wrapper {
+  padding: 0;
+  max-width: 100%;
+}
+
+.footer {
+  background: #fff;
+  display: block;
+  padding: 0;
+}
+
 /* set to allow printing of the tables */
 
 @media print {
