--- a/src/static/css/hmda.less
+++ b/src/static/css/hmda.less
@@ -88,3 +88,13 @@ tbody > tr:nth-child(2n+1) > th, tbody > tr:nth-child(2n+1) > td {
 		text-transform: uppercase;
 	}
 }
+
+.wrapper {
+	padding: 0;
+	max-width: 100%;
+}
+.footer {
+	background: #fff;
+	display: block;
+	padding: 0;
+}
